--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--content-->
     <div class="wrapper">
       <header>
+        <!--Header-->
         <h1>Password Generator</h1>
       </header>
+      <!--Generate Password Section-->
       <div class="card">
+        <!--Generate Password Header-->
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+        <!--Generated Password Area-->
         <div class="card-body">
+          <!--Generated Password-->
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Click 'Generate Password' For Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <!--Generate Button-->
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <p>created by: kemaldemirgil</p>
         </div>
       </div>
     </div>
